cloudformation/bootstrap.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Template for OpenShift Cluster Bootstrap (EC2 Instance, Security Groups and IAM)

Parameters:
  InfrastructureName:
    AllowedPattern: ^([a-zA-Z][a-zA-Z0-9\-]{0,26})$
    MaxLength: 27
    MinLength: 1
    ConstraintDescription: >-
      Infrastructure name must be alphanumeric, start with a letter, and have
      a maximum of 27 characters.
    Description: >-
      A short, unique cluster ID used to tag cloud resources and identify items
      owned or used by the cluster. You should use the value generated when
      creating the manifest files using `openshift-install create manifests`.
    Type: String

  RhcosAmi:
    Description: >-
      Current Red Hat Enterprise Linux CoreOS AMI to use for bootstrap.
    Type: AWS::EC2::Image::Id

  AllowedBootstrapSshCidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|1[0-9]|2[0-9]|3[0-2]))$
    ConstraintDescription: >-
      CIDR block parameter must be in the form x.x.x.x/0-32.
    Description: >-
      CIDR block to allow SSH access to the bootstrap node.
    Default: 0.0.0.0/0
    Type: String

  PublicSubnet:
    Description: >-
      The public subnet to launch the bootstrap node into.
    Type: AWS::EC2::Subnet::Id

  MasterSecurityGroupId:
    Description: >-
      The master security group ID.
    Type: AWS::EC2::SecurityGroup::Id

  VpcId:
    Description: >-
      The VPC-scoped resources will belong to this VPC.
    Type: AWS::EC2::VPC::Id

  BootstrapIgnitionLocation:
    Description: >-
      Ignition config file location. (Ex: s3://my-s3-bucket/bootstrap.ign)
    Type: String

  BootstrapInstanceProfileName:
    Type: String

  CreateIAMRoles:
    AllowedValues:
      - "true"
      - "false"
    Description: >-
      Should the cloud formation template create the IAM roles and instance profiles
    Default: "true"
    Type: String

  CreateSecurityGroups:
    AllowedValues:
      - "true"
      - "false"
    Description: >-
      Should the cloud formation template create security groups
    Default: "true"
    Type: String

  IgnitionVersion:
    Description: >-
      Ignition version
    Type: String

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Cluster Information"
        Parameters:
          - InfrastructureName
          - CreateIAMRoles
          - CreateSecurityGroups
      - Label:
          default: "Host Information"
        Parameters:
          - RhcosAmi
          - BootstrapIgnitionLocation
          - IgnitionVersion
          - MasterSecurityGroupId
      - Label:
          default: "Network Configuration"
        Parameters:
          - VpcId
          - AllowedBootstrapSshCidr
          - PublicSubnet
    ParameterLabels:
      InfrastructureName:
        default: "Infrastructure Name"
      VpcId:
        default: "VPC ID"
      AllowedBootstrapSshCidr:
        default: "Allowed SSH Source"
      PublicSubnet:
        default: "Public Subnet"
      RhcosAmi:
        default: "Red Hat Enterprise Linux CoreOS AMI ID"
      BootstrapIgnitionLocation:
        default: "Bootstrap Ignition Source"
      MasterSecurityGroupId:
        default: "Master Security Group ID"
      IgnitionVersion:
        default: "Ignition Version"
      CreateIAMRoles:
        default: "true"
      CreateSecurityGroups:
        default: "true"

Conditions:
  DoIAMRoles: !Equals ["true", !Ref CreateIAMRoles]
  DoSecurityGroups: !Equals ["true", !Ref CreateSecurityGroups]

Resources:
  BootstrapIamRole:
    Condition: DoIAMRoles
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ["-", [!Ref InfrastructureName, "bootstrap", "role"]]
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
      Policies:
        - PolicyName: !Join ["-", [!Ref InfrastructureName, "bootstrap", "policy"]]
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action: "ec2:Describe*"
                Resource: "*"
              - Effect: "Allow"
                Action: "ec2:AttachVolume"
                Resource: "*"
              - Effect: "Allow"
                Action: "ec2:DetachVolume"
                Resource: "*"
              - Effect: "Allow"
                Action: "s3:GetObject"
                Resource: "*"
      Tags:
        - Key: "Name"
          Value: !Join ["-", [!Ref InfrastructureName, "bootstrap", "role"]]
        - Key: !Join ["", [kubernetes.io/cluster/, !Ref InfrastructureName]]
          Value: owned

  BootstrapInstanceProfile:
    Condition: DoIAMRoles
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      InstanceProfileName: !Join ["-", [!Ref InfrastructureName, "bootstrap", "profile"]]
      Roles:
      - Ref: "BootstrapIamRole"

  BootstrapSecurityGroup:
    Condition: DoSecurityGroups
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [!Ref InfrastructureName, "bootstrap", "sg"]]
      GroupDescription: Cluster Bootstrap Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedBootstrapSshCidr
        - IpProtocol: tcp
          ToPort: 19531
          FromPort: 19531
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VpcId

  BootstrapInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref RhcosAmi
      IamInstanceProfile: !Ref BootstrapInstanceProfileName
      InstanceType: "i3.large"
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - !Ref "BootstrapSecurityGroup"
            - !Ref "MasterSecurityGroupId"
          SubnetId: !Ref "PublicSubnet"
      UserData:
        Fn::Base64: !Sub [
          '{"ignition":{"config":{"replace":{"source":"${S3Loc}","verification":{}}},"timeouts":{},"version":"${IGN_VER}"},"networkd":{},"passwd":{},"storage":{},"systemd":{}}',
          {
            S3Loc: !Ref BootstrapIgnitionLocation,
            IGN_VER: !Ref IgnitionVersion
          }
        ]
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref InfrastructureName, "bootstrap"]]
        - Key: !Join ["", ["kubernetes.io/cluster/", !Ref InfrastructureName]]
          Value: "owned"

Outputs:
  BootstrapInstanceId:
    Description: Bootstrap Instance ID.
    Value: !Ref BootstrapInstance

  BootstrapPublicIp:
    Description: The bootstrap node public IP address.
    Value: !GetAtt BootstrapInstance.PublicIp

  BootstrapPrivateIp:
    Description: The bootstrap node private IP address.
    Value: !GetAtt BootstrapInstance.PrivateIp
